# shopper-hivemind

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  constants.h  datarow.cpp  datarow.h  download-data  history.h  main.cpp  offer.h  outputwriter.cpp  outputwriter.h  shopper-hivemind.pro  transaction.h
Tools/: reduce.py
report/: report.tex
src/: CMakeLists.txt  cache.h  classifier.cpp  classifier.h  cli.h  client.h  datarow.cpp  datarow.h  dataset.cpp  dataset.h  featureset.cpp  featureset.h  history.cpp  history.h  joiner.h  linearclassifier.cpp  linearclassifier.h  main.cpp  offer.cpp  offer.h  outputwriter.cpp  outputwriter.h  productmeasure.h  regressor.cpp  regressor.h  transaction.cpp  transaction.h  typedefs.cpp  typedefs.h
src/data/: client.h  datarow.cpp  datarow.h  history.cpp  history.h  offer.cpp  productmeasure.h  transaction.h
src/util/: convertor.h  csv_parser.cpp  csv_parser.h  csv_reader.h  csvparser.cpp  csvparser.h  csvreader.h  featureextractor.cpp  featureextractor.h  filter.h  measures.cpp  measures.h  msgpack_reader.h  msgpack_writer.h  msgpackreader.h  msgpackwriter.h  normaliser.cpp  normaliser.h  reader.h  splitter.h  writer.h
